Fix extra spacing

--- a/assets/_styl/_layout.styl
+++ b/assets/_styl/_layout.styl
@@ -9,6 +9,9 @@ body
     background mainColor
     color white
 
+    & ~ object
+        display none
+
 h1
     font-family headingFont
     font-weight 100
